--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,13 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.15.0-rc1</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
